--- a/server/pom.xml
+++ b/server/pom.xml
@@ -32,5 +32,13 @@
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-yaml</artifactId>
         </dependency>
+
+        <!-- Common dependency -->
+        <dependency>
+            <groupId>ru.develonica</groupId>
+            <artifactId>jms-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
