--- a/producer/pom.xml
+++ b/producer/pom.xml
@@ -39,5 +39,13 @@
             <artifactId>oshi-core</artifactId>
             <version>6.3.0</version>
         </dependency>
+
+        <!-- Common dependency -->
+        <dependency>
+            <groupId>ru.develonica</groupId>
+            <artifactId>jms-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
