--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,14 @@
                 <artifactId>jackson-dataformat-yaml</artifactId>
                 <version>2.13.0</version>
             </dependency>
+
+            <!-- Common dependency -->
+            <dependency>
+                <groupId>ru.develonica</groupId>
+                <artifactId>jms-common</artifactId>
+                <version>1.0-SNAPSHOT</version>
+                <scope>compile</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
